--- a/Deprocrastinator/Base.lproj/Main.storyboard
+++ b/Deprocrastinator/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Deprocrastinator-->
@@ -20,6 +21,15 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="65" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="znh-au-Ozg">
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <textField key="tableHeaderView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="New Task" textAlignment="center" minimumFontSize="17" id="1iJ-hH-nnD">
+                                    <rect key="frame" x="20" y="64" width="240" height="30"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                    <connections>
+                                        <outlet property="delegate" destination="BYZ-38-t0r" id="us6-h0-mHe"/>
+                                    </connections>
+                                </textField>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CellID" rowHeight="65" id="heY-qi-tPl">
                                         <rect key="frame" x="0.0" y="92" width="600" height="44"/>
@@ -30,44 +40,53 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="0.0" y="0.0" width="400" height="592"/>
-                                </variation>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="QSZ-Fz-FGg"/>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="esN-sd-l3n"/>
                                 </connections>
                             </tableView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Task" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1iJ-hH-nnD">
-                                <rect key="frame" x="20" y="64" width="240" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="0.0" y="64" width="240" height="30"/>
-                                </variation>
-                                <connections>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="us6-h0-mHe"/>
-                                </connections>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="faW-Cc-gZF">
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="znh-au-Ozg" secondAttribute="trailing" constant="-20" id="7Tb-h1-9P8"/>
+                            <constraint firstItem="znh-au-Ozg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="D3y-Qn-MQo"/>
+                            <constraint firstItem="znh-au-Ozg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="h5a-D8-PXI"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="znh-au-Ozg" secondAttribute="bottom" constant="8" id="q6v-MD-yiL"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="7Tb-h1-9P8"/>
+                                <exclude reference="D3y-Qn-MQo"/>
+                                <exclude reference="h5a-D8-PXI"/>
+                                <exclude reference="q6v-MD-yiL"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="constraints">
+                                <include reference="7Tb-h1-9P8"/>
+                                <include reference="D3y-Qn-MQo"/>
+                                <include reference="h5a-D8-PXI"/>
+                                <include reference="q6v-MD-yiL"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Deprocrastinator" id="GiB-mg-qBx">
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="jcf-xC-6sf">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="faW-Cc-gZF">
                                 <rect key="frame" x="290" y="72" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Add"/>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="240" y="64" width="160" height="30"/>
-                                </variation>
                                 <connections>
                                     <action selector="onAddPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2FY-Oe-iVs"/>
                                 </connections>
                             </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Deprocrastinator" id="GiB-mg-qBx">
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="edit" id="tye-bU-NT1"/>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="taskTableView" destination="znh-au-Ozg" id="NXV-0X-JO0"/>
                         <outlet property="textField" destination="1iJ-hH-nnD" id="bPF-jO-yFE"/>
                     </connections>
                 </viewController>
@@ -91,7 +110,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fI1-sg-cDy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="245" y="997"/>
+            <point key="canvasLocation" x="328.5" y="838"/>
         </scene>
     </scenes>
 </document>
