--- a/Deprocrastinator/Base.lproj/Main.storyboard
+++ b/Deprocrastinator/Base.lproj/Main.storyboard
@@ -71,7 +71,9 @@
                             </mask>
                         </variation>
                     </view>
-                    <toolbarItems/>
+                    <toolbarItems>
+                        <barButtonItem systemItem="edit" id="6Pg-oR-DQc"/>
+                    </toolbarItems>
                     <navigationItem key="navigationItem" title="Deprocrastinator" id="GiB-mg-qBx">
                         <barButtonItem key="leftBarButtonItem" style="plain" id="jcf-xC-6sf">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="faW-Cc-gZF">
@@ -83,7 +85,11 @@
                                 </connections>
                             </button>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="tye-bU-NT1"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="tye-bU-NT1">
+                            <connections>
+                                <action selector="onEditTapped:" destination="BYZ-38-t0r" id="dTQ-hJ-aa2"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
